# nox

./: .clang-format  CMakeLists.txt  README.md
link/: riscv_qemu.ld
src/: CMakeLists.txt  cabi.hpp  entry.asm  main.cpp
src/arch/: csr.cpp  csr.hpp  interrupts.cpp  interrupts.hpp  memory.hpp  mmio.hpp  processor.cpp  processor.hpp
src/arch/memory/: linear_allocator.cpp  memory.cpp  page_allocator.cpp
src/drivers/: ns16550a.cpp  uart.hpp
src/std/: concepts  cstdint  cstdio  cstring  init.hpp
src/std/impl/: formatters.hpp  init.cpp  stdio.cpp  string.cpp
src/util/: cast.hpp
toolchain/: riscv_llvm.cmake
